--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">
                 <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="./index.html">Studio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                 </ul>
@@ -54,11 +54,21 @@
                 <h2 class="visually-hidden">feature</h2>
                 <ul class="feature-list">
                     <li class="feature-item">
+                        <div class="feature-cont-icon">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Strategy</h3>
                         <p class="feature-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-cont-icon">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-clock-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Punctuality</h3>
                         <p class="feature-text">Bring the key message to the brand's audience for the best price within
                             the
@@ -66,12 +76,22 @@
                             time.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-cont-icon">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Diligence</h3>
                         <p class="feature-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-cont-icon">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Technologies</h3>
                         <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
                             passion for
@@ -90,22 +110,90 @@
                         <div class="team-item-container">
                             <h3 class="team-title-name">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
+                            <div class="team-cont-link">
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </li>
-
                     <li class="team-item">
                         <img src="./images/tom_ford.jpg" alt="foto Frontend Developer" width="264" height="260">
                         <div class="team-item-container">
                             <h3 class="team-title-name">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <div class="team-cont-link">
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </li>
-
                     <li class="team-item">
                         <img src="./images/camila_garcia.jpg" alt="foto Marketing" width="264" height="260">
                         <div class="team-item-container">
                             <h3 class="team-title-name">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
+                            <div class="team-cont-link">
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                     <li class="team-item">
@@ -113,6 +201,30 @@
                         <div class="team-item-container">
                             <h3 class="team-title-name">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
+                            <div class="team-cont-link">
+                                <ul class="social-list">
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a></li>
+                                    <li><a href="#" class="social-list-icon">
+                                            <svg class="social-icon" width="16" height="16">
+                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -126,7 +238,9 @@
                 <h2 class="portfolio-title-sybject">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
+                        <div class="overlay">
+                            <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Banking App</h3>
                             <p class="portfolio-text">App</p>
