--- a/index.html
+++ b/index.html
@@ -238,45 +238,110 @@
                 <h2 class="portfolio-title-sybject">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <div class="overlay">
-                            <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
-                        </div>
+                        <a href="#" class="overlay-link">
+                            <div class="portfolio-overlay">
+                                <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Banking App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300">
+                        <a href="#" class="overlay-link">
+                            <div>
+                                <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360"
+                                    height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Cashless Payment</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
+                        <a href="#" class="overlay-link">
+                            <div>
+                                <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Meditation App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
+                        <a href="#" class="overlay-link">
+                            <div>
+                                <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Taxi Service</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360"
-                            height="300">
+                        <a href="#" class="overlay-link">
+                            <div>
+                                <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360"
+                                    height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Screen Illustrations</h3>
                             <p class="portfolio-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
+                        <a href="#" class="overlay-link">
+                            <div>
+                                <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
+                            </div>
+                            <div class="overlay">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </a>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Online Courses</h3>
                             <p class="portfolio-text">Marketing</p>
@@ -288,12 +353,39 @@
     </main>
     <!-- =====Footer===== -->
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="container footer-cont">
+            <div>
+                <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-social-icon">
+                <p class="footer-text-social">Social media</p>
+                <ul class="footer-social-list">
+                    <li><a href="#" class="footer-social-list-icon">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a></li>
+                    <li><a href="#" class="footer-social-list-icon">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a></li>
+                    <li><a href="#" class="footer-social-list-icon">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a></li>
+                    <li><a href="#" class="footer-social-list-icon">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a></li>
+                </ul>
+            </div>
         </div>
-
     </footer>
 </body>
 
