--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="feature-item">
                         <div class="feature-cont-icon">
                             <svg class="feature-icon" width="64" height="64">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-antenna-1"></use>
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Strategy</h3>
@@ -66,7 +66,7 @@
                     <li class="feature-item">
                         <div class="feature-cont-icon">
                             <svg class="feature-icon" width="64" height="64">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-clock-1"></use>
+                                <use href="./images/icons.svg#icon-clock-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Punctuality</h3>
@@ -78,7 +78,7 @@
                     <li class="feature-item">
                         <div class="feature-cont-icon">
                             <svg class="feature-icon" width="64" height="64">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-diagram-1"></use>
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Diligence</h3>
@@ -89,7 +89,7 @@
                     <li class="feature-item">
                         <div class="feature-cont-icon">
                             <svg class="feature-icon" width="64" height="64">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-astronaut-1"></use>
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Technologies</h3>
@@ -114,22 +114,22 @@
                                 <ul class="social-list">
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a></li>
                                 </ul>
@@ -144,22 +144,22 @@
                                 <ul class="social-list">
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a></li>
                                 </ul>
@@ -174,22 +174,22 @@
                                 <ul class="social-list">
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a></li>
                                 </ul>
@@ -205,22 +205,22 @@
                                 <ul class="social-list">
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a></li>
                                     <li><a href="#" class="social-list-icon">
                                             <svg class="social-icon" width="16" height="16">
-                                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a></li>
                                 </ul>
@@ -365,22 +365,22 @@
                 <ul class="footer-social-list">
                     <li><a href="#" class="footer-social-list-icon">
                             <svg class="social-icon" width="24" height="24">
-                                <use href="./images/icons.svg/icons.svg#icon-instagram-2"></use>
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a></li>
                     <li><a href="#" class="footer-social-list-icon">
                             <svg class="social-icon" width="24" height="24">
-                                <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a></li>
                     <li><a href="#" class="footer-social-list-icon">
                             <svg class="social-icon" width="24" height="24">
-                                <use href="./images/icons.svg/icons.svg#icon-facebook-1"></use>
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a></li>
                     <li><a href="#" class="footer-social-list-icon">
                             <svg class="social-icon" width="24" height="24">
-                                <use href="./images/icons.svg/icons.svg#icon-linkedin-1"></use>
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                         </a></li>
                 </ul>
